dnl Process this file with autoconf to produce a configure script.
AC_INIT(regex.c)

AC_PROG_CC
AC_PROG_INSTALL

dnl I'm not sure if AC_AIX and AC_DYNIX_SEQ are really necessary.  The
dnl Autoconf documentation isn't specific about which BSD functions they
dnl provide.
AC_AIX
AC_DYNIX_SEQ
AC_ISC_POSIX
AC_MINIX

AC_STDC_HEADERS
AC_USG

AC_ALLOCA
dnl We would like to use AC_CONST, but then the test on __STDC__ fails,
dnl and any package which does *not* use AC_CONST loses.

AC_PREFIX(gcc)

AC_OUTPUT(Makefile doc/Makefile test/Makefile)
