BUILT_SOURCES =
SUFFIXES =

EXTRA_DIST =
EXTRA_HEADERS =
nodist_pkginclude_HEADERS =
nobase_nodist_pkginclude_HEADERS =
pkginclude_HEADERS = version.h

CLEANFILES =
MOSTLYCLEANDIRS =
MOSTLYCLEANFILES =
MAINTAINERCLEANFILES =

include gnulib.mk

libposix_la_LDFLAGS += -version-info $(LTV_CURRENT):$(LTV_REVISION):$(LTV_AGE)
libposix_la_SOURCES += version.c
