dnl Configuration of librpathx.
dnl
dnl Copyright (C) 2002-2003, 2005, 2010-2022 Free Software Foundation, Inc.
dnl
dnl This program is free software: you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation, either version 3 of the License, or
dnl (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with this program.  If not, see <https://www.gnu.org/licenses/>.

AC_INIT([configure.ac])
AC_CONFIG_AUX_DIR([../../../build-aux])
AC_CONFIG_MACRO_DIR([../ltm4])
AM_INIT_AUTOMAKE([gettext_rpathx], [0])
AC_PROG_CC
AM_PROG_LIBTOOL
AC_SUBST([global_top_auxdir])
AC_OUTPUT([Makefile])
